fix: content overflowing border box

--- a/src/scss/components/_left-bar-container.scss
+++ b/src/scss/components/_left-bar-container.scss
@@ -12,6 +12,7 @@
   nav, section {
     border-radius: ms.$big-radius;
     background-color: tc.$background-secondary;
+    overflow: hidden;
 
     .scroller-1ox3I2 {
       border-radius: ms.$big-radius;
