--- a/src/scss/components/_messages-wrapper-container.scss
+++ b/src/scss/components/_messages-wrapper-container.scss
@@ -34,6 +34,7 @@
   border-radius: ms.$big-radius;
   box-shadow: tc.$box-shadow;
   background: tc.$background-primary;
+  overflow: hidden;
 
   .buttonContainer_dd4b62 .wrapper_c727b6 {
     border-radius: ms.$medium-radius;
